OTel/ingress-nginx-minikube/otel-collector-deployment.yaml
# otel-collector-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otel-collector
  namespace: default
  labels:
    app: otel-collector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: otel-collector
  template:
    metadata:
      labels:
        app: otel-collector
    spec:
      containers:
        - name: otel-collector
          image: otel/opentelemetry-collector-contrib:0.102.0
          ports:
            - containerPort: 4317 # OTLP gRPC port
            - containerPort: 4318 # OTLP HTTP port
          volumeMounts:
            - name: otel-collector-config
              mountPath: /etc/otel-collector-config
              subPath: otel-collector-config.yaml
      volumes:
        - name: otel-collector-config
          configMap:
            name: otel-collector-config

---
apiVersion: v1
kind: Service
metadata:
  name: otel-collector
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: otel-collector
  ports:
    - name: otlp-grpc  # Added name for gRPC port
      protocol: TCP
      port: 4317
      targetPort: 4317
    - name: otlp-http  # Added name for HTTP port
      protocol: TCP
      port: 4318
      targetPort: 4318
