OTel/ingress-nginx-minikube/example-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress

spec:
  ingressClassName: nginx
  rules:
    - host: hello-world.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
    - host: hello-world.example
      http:
        paths:
          - path: /flask
            pathType: Prefix
            backend:
              service:
                name: flask-otel
                port:
                  number: 8080
